--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Artifact Cards Indexer</title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="radiance.css" media="screen">
     <link rel="stylesheet" href="app.css" media="screen">
   </head>
